<resources>
    <string name="app_name">Restaurant Service Utility</string>
    <string name="login_title">Please Select an Option for This Device:</string>
    <string name="login_info">Please Ensure That You Are Connected to The Local Network for Proper Data Transfer Between Your Devices!</string>
    <string name="waiter_text">Waiter</string>
    <string name="console_text">Console</string>
    <string name="kitchen_text">Kitchen</string>
    <string name="name_enter_info">Please Enter a Name for this Device!</string>
    <string name="name_enter_blank">Enter Name</string>
    <string name="confirmText">Confirm</string>
    <string name="goBackText">Go Back</string>
    <string name="editMenuText">Edit Menu</string>
    <string name="menuTitleText">Menu</string>
    <string name="orderListText">Orders</string>
    <string name="orderItemListText">Items</string>
    <string name="editOrderText">Edit</string>
    <string name="pickupOrderText">Signal Pickup</string>
    <string name="inquiriesText">Inquiries</string>
    <string name="kitchenNameText">Kitchen/Bar Interface:</string>
    <string name="fulfilledOrdersText">Fulfilled Orders</string>
    <string name="waiterScreenTitle">Waiter Interface:</string>
    <string name="waiterPickupReadyText">Ready Pickups</string>
    <string name="servedOrdersText">Served Orders</string>
    <string name="placeOrderText">Place Order</string>
    <string name="placedOrdersText">Placed Orders</string>
    <string name="minusText">-</string>
    <string name="plusText">+</string>
    <string name="categoriesText">Categories</string>
    <string name="menuItemsText">Menu Items</string>
    <string name="viewMenuItemText">View</string>
    <string name="namePriceInputTitle">Please Input First the Name, Then the Price.</string>
    <string name="sampleDecimalText">0.00</string>
    <string name="enterDescriptionText">Enter Description Here</string>
    <string name="variationsText">Variations</string>
    <string name="additionsText">Additions</string>
    <string name="uploadText">Upload</string>
    <string name="editText">Edit</string>
    <string name="justPriceTitle">Please Enter a New Price for the Base Item.</string>
    <string name="serveOrderText">Serve Order</string>
    <string name="orderScreenTitleText">Place an Order:</string>
    <string name="addItemOrderText">Add Selected Item</string>
    <string name="tableNumber">Table Number:</string>
    <string name="additionVariantChooseTitle">Please Choose a Variant and Additions!</string>
    <string name="variantSelectText">Select a Variant:</string>
    <string name="additionSelectText">Select Addition(s), if Any:</string>
    <string name="priceText">Price:</string>
    <string name="orderComments">Order Comments:</string>
    <string name="clearText">Clear</string>
    <string name="inquiryText">Inquiry:</string>
    <string name="responseText">Response:</string>
    <string name="ordersText">Orders:</string>
    <string name="itemsText">Items:</string>
    <string name="placeComplaintText">Place Complaint</string>
    <string name="viewComplaintText">View Complaint</string>
    <string name="exportDataText">Export Data</string>
    <string name="clearAllText">Clear All</string>
    <string name="orderTotalText">Order Total:</string>
    <string name="viewTimeText">View Time</string>
    <string name="removeItemText">Remove Item</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
