<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".WaiterScreen">

    <TextView
        android:id="@+id/waiterScreenTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/waiterScreenTitle"
        tools:layout_editor_absoluteX="144dp"
        tools:layout_editor_absoluteY="15dp" />

    <TextView
        android:id="@+id/waiterNameText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TextView"
        tools:layout_editor_absoluteX="166dp"
        tools:layout_editor_absoluteY="60dp" />

    <ScrollView
        android:layout_width="142dp"
        android:layout_height="379dp"
        tools:layout_editor_absoluteX="24dp"
        tools:layout_editor_absoluteY="151dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/pickupList"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </LinearLayout>
    </ScrollView>

    <TextView
        android:id="@+id/pickupText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/waiterPickupReadyText"
        tools:layout_editor_absoluteX="52dp"
        tools:layout_editor_absoluteY="119dp" />

    <Button
        android:id="@+id/backButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/goBackText"
        tools:layout_editor_absoluteX="23dp"
        tools:layout_editor_absoluteY="15dp" />

    <Button
        android:id="@+id/servedOrdersButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/servedOrdersText"
        tools:layout_editor_absoluteX="264dp"
        tools:layout_editor_absoluteY="16dp" />

    <Button
        android:id="@+id/orderButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/placeOrderText"
        tools:layout_editor_absoluteX="23dp"
        tools:layout_editor_absoluteY="569dp" />

    <Button
        android:id="@+id/sendInquiryButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/inquiriesText"
        tools:layout_editor_absoluteX="224dp"
        tools:layout_editor_absoluteY="571dp" />

    <ScrollView
        android:layout_width="161dp"
        android:layout_height="369dp"
        tools:layout_editor_absoluteX="211dp"
        tools:layout_editor_absoluteY="156dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/placedOrders"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </LinearLayout>
    </ScrollView>

    <TextView
        android:id="@+id/placedOrdersText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/placedOrdersText"
        tools:layout_editor_absoluteX="249dp"
        tools:layout_editor_absoluteY="119dp" />
</androidx.constraintlayout.widget.ConstraintLayout>