<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".KitchenScreen">

    <TextView
        android:id="@+id/kitchenTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="17dp"
        android:text="@string/kitchenNameText"
        app:layout_constraintEnd_toStartOf="@+id/pastOrdersButton"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/orderList"
        android:layout_width="96dp"
        android:layout_height="484dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="33dp"
        app:layout_constraintBottom_toBottomOf="@+id/orderItemList"
        app:layout_constraintEnd_toStartOf="@+id/orderItemList"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/orderItemList" />

    <TextView
        android:id="@+id/ordersText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="27dp"
        android:layout_marginBottom="11dp"
        android:text="@string/orderListText"
        app:layout_constraintBottom_toTopOf="@+id/orderList"
        app:layout_constraintStart_toStartOf="@+id/orderList" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/orderItemList"
        android:layout_width="255dp"
        android:layout_height="483dp"
        android:layout_marginTop="79dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="78dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/orderList"
        app:layout_constraintTop_toBottomOf="@+id/pastOrdersButton" />

    <TextView
        android:id="@+id/orderItemText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="9dp"
        android:text="@string/orderItemListText"
        app:layout_constraintBottom_toTopOf="@+id/orderItemList"
        app:layout_constraintEnd_toEndOf="@+id/orderItemList"
        app:layout_constraintStart_toStartOf="@+id/orderItemList" />

    <Button
        android:id="@+id/editOrderButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="22dp"
        android:layout_marginBottom="17dp"
        android:text="@string/editOrderText"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/signalPickupButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginBottom="16dp"
        android:text="@string/pickupOrderText"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/orderList" />

    <Button
        android:id="@+id/viewInquiries"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="17dp"
        android:text="@string/inquiriesText"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/backButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="17dp"
        android:layout_marginTop="14dp"
        android:layout_marginEnd="67dp"
        android:text="@string/goBackText"
        app:layout_constraintEnd_toStartOf="@+id/kitchenName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/kitchenName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="23dp"
        android:layout_marginEnd="61dp"
        android:text="TextView"
        app:layout_constraintEnd_toStartOf="@+id/pastOrdersButton"
        app:layout_constraintStart_toEndOf="@+id/backButton"
        app:layout_constraintTop_toBottomOf="@+id/kitchenTitle" />

    <Button
        android:id="@+id/pastOrdersButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="14dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="8dp"
        android:text="@string/fulfilledOrdersText"
        app:layout_constraintBottom_toBottomOf="@+id/kitchenName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/kitchenName"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>